(MAINT) Add named parameters for shortcodes

--- a/layouts/shortcodes/icon.html
+++ b/layouts/shortcodes/icon.html
@@ -1,2 +1,9 @@
-{{- $icon   := .Get 0 -}}
+{{- if .IsNamedParams -}}
+  {{- $.Scratch.Set "icon"  (.Get "icon") -}}
+{{- else -}}
+  {{- $.Scratch.Set "icon"  (.Get 0) -}}
+{{- end -}}
+
+{{- $icon   := $.Scratch.Get "icon" -}}
+
 <img src="/icons/{{$icon}}.svg" alt="{{$icon}}" class="icons"/>
