--- a/layouts/shortcodes/detail.html
+++ b/layouts/shortcodes/detail.html
@@ -1,5 +1,13 @@
-{{- $type := .Get 0 -}}
-{{- $title := .Get 1 -}}
+{{- if .IsNamedParams -}}
+  {{- $.Scratch.Set "type"  (.Get "type") -}}
+  {{- $.Scratch.Set "title" (.Get "title") -}}
+{{- else -}}
+  {{- $.Scratch.Set "type"  (.Get 0) -}}
+  {{- $.Scratch.Set "title" (.Get 1) -}}
+{{- end -}}
+
+{{- $type := $.Scratch.Get "type" -}}
+{{- $title := $.Scratch.Get "title" -}}
 {{- $anchor := urlize $title -}}
 
 <details class="{{ $type }}">
