(MAINT) Add art shortcode

--- a/assets/scss/site.scss
+++ b/assets/scss/site.scss
@@ -2,6 +2,7 @@
 @import 'site/icons';
 @import 'site/details';
 @import 'site/rolltable';
+@import 'site/art';
 
 html {
   font-family: $font-stack;
