(MAINT) Add current location to sidebar nav

--- a/assets/scss/blog/_nav.scss
+++ b/assets/scss/blog/_nav.scss
@@ -110,6 +110,7 @@ aside.blog-nav {
       list-style: none;
       padding: 0;
       margin: 0;
+      font-weight: bold;
 
       &.show {
         display: flex;
@@ -139,6 +140,14 @@ aside.blog-nav {
 
         &:hover {
           background-color: $primary-color-hover;
+        }
+      }
+
+      &.current {
+        background-color: $primary-color-light;
+        .menu-link,
+        .menu-toggle {
+          background-color: $primary-color-light;
         }
       }
 
