--- a/assets/scss/games/_nav.scss
+++ b/assets/scss/games/_nav.scss
@@ -41,11 +41,16 @@ aside.game-nav {
 
     > .menu {
       display: none;
+      font-weight: bold;
 
       &.show {
         flex-direction: column;
         flex-wrap: wrap;
         align-items: center;
+      }
+
+      &.current {
+        background-color: $secondary-color;
       }
     }
 
