--- a/layouts/partials/blog/nav.html
+++ b/layouts/partials/blog/nav.html
@@ -43,14 +43,15 @@
   {{- $activeNode := .activeNode -}}
   {{- $blog       := .blog -}}
   {{- with .nodeToProcess -}}
-    {{- $isActivePage  := eq $activeNode.Title .Title -}}
-    {{- $isPage        := eq .Kind "page" -}}
-    {{- $numberOfPages := (add (len .Pages) (len .Sections)) -}}
+    {{- $isActivePage         := eq $activeNode.Title .Title -}}
+    {{- $isActivePageAncestor := .IsAncestor $activeNode -}}
+    {{- $isPage               := eq .Kind "page" -}}
+    {{- $numberOfPages        := (add (len .Pages) (len .Sections)) -}}
     {{/* Build TOC */}}
       {{/* Strip uneccesary nav*/}}
       {{- $toc    := .TableOfContents | replaceRE `<nav id="TableOfContents">` "" | replaceRE "</nav>" "" -}}
       {{/* Add menu dropdown classes to ul*/}}
-      {{- $topTOC := printf "<ul class=%v>" `"menu dropdown"` -}}
+      {{- $topTOC := printf "<ul class=%v>" `"menu dropdown current"` -}}
       {{- $toc    := $toc | replaceRE "<ul>" $topTOC -}}
       {{/* Add menu-item class to li*/}}
       {{- $toc    := $toc | replaceRE "<li>" `<li class="menu-item">` -}}
@@ -66,7 +67,7 @@
       {{- $children := (.Scratch.Get "children") -}}
       <li class="menu-item dropdown">
         <a href="#" class="menu-link dropdown-toggle">{{ .Title }}</a>
-        <ul class="menu dropdown">
+        <ul class="{{ cond $isActivePageAncestor "menu dropdown current" "menu dropdown" }}">
           <li class="menu-item"><a href="{{ .RelPermalink }}" class="menu-link">Posts</a></li>
           {{- range $children.ByWeight -}}
           {{ template "blog-nav-item" dict "activeNode" $activeNode "blog" $blog "nodeToProcess" . }}
