--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,42 +1,50 @@
 // Global defaults
-$font-stack: Helvetica, sans-serif;
-$primary-color: #00b3b3;
-$primary-color-text: #FFF;
-$primary-color-light: #7fd9d9;
-$primary-color-hover: #6bd3d3;
-$secondary-color: #b300b3;
-$secondary-color-text: #FFF;
-$secondary-color-light: #d97fd9;
-$secondary-color-hover: #d36bd3;
-$tertiary-color: #b3b300;
-$tertiary-color-text: #FFF;
-$tertiary-color-light: #d9d97f;
-$tertiary-color-hover: #d3d36b;
-$site-nav-height: 4em;
+:root {
+  --font-stack: Helvetica, sans-serif;
+  --site-nav-height: 4em;
+  --primary-color: #00b3b3;
+  --primary-color-text: #FFF;
+  --primary-color-light: #7fd9d9;
+  --primary-color-hover: #6bd3d3;
+  --secondary-color: #b300b3;
+  --secondary-color-text: #FFF;
+  --secondary-color-light: #d97fd9;
+  --secondary-color-hover: #d36bd3;
+  --tertiary-color: #b3b300;
+  --tertiary-color-text: #FFF;
+  --tertiary-color-light: #d9d97f;
+  --tertiary-color-hover: #d3d36b;
+  --blog-nav-height: 4em;
+  --game-nav-height: 4em;
+}
 // Override Site variables from config
 {{ with .Site.Params.scss.site }}
   {{ range $variable, $value := . }}
-    ${{ $variable}}: {{ $value }};
+    :root {
+      --{{ $variable }}: {{ $value }}
+    }
   {{ end }}
 {{ end }}
 // Site SCSS
 @import 'site';
 // Blog SCSS
-$blog-nav-height: 4em;
 // Override blog defaults from site config
 {{ with .Site.Params.scss.blog }}
   {{ range $variable, $value := . }}
-    ${{ $variable }}: {{ $value }};
+    :root {
+      --{{ $variable }}: {{ $value }}
+    }
   {{ end }}
 {{ end }}
 @import 'blog';
 // Store SCSS
 // Game Variables inherit from site unless overridden
-$game-nav-height: 4em;
 // Override game defaults from site config
 {{ with .Site.Params.scss.games }}
   {{ range $variable, $value := . }}
-    ${{ $variable }}: {{ $value }};
+    :root {
+      --{{ $variable }}: {{ $value }}
+    }
   {{ end }}
 {{ end }}
 // Game SCSS
@@ -48,7 +56,9 @@ $game-nav-height: 4em;
   {{ $name := lower (urlize .Title) }}
   {{ with .Params.scss }}
     {{ range $variable, $value := . }}
-      ${{ $variable }}: {{ $value }};
+      :root {
+        --{{ $variable }}: {{ $value }}
+      }
     {{ end }}
     $name: "{{ $name }}";
     // Import the general variable override
@@ -56,6 +66,6 @@ $game-nav-height: 4em;
   {{ end }}
   body > footer::after {
     content: "{{ resources.Get (printf "scss/%v.scss" $name) }}";
-    color: $primary-color;
+    color: var(--primary-color);
   }
 {{ end }}
