--- a/assets/scss/games/_nav.scss
+++ b/assets/scss/games/_nav.scss
@@ -3,11 +3,11 @@ aside.game-nav {
   left: 0;
   position: fixed;
   height: 100%;
-  top: $site-nav-height;
+  top: var(--site-nav-height);
   z-index: 1;
   float: left;
   @media screen and (max-width: 1069px) {
-    height: $game-nav-height;
+    height: var(--game-nav-height);
 
     &.wide {
       width: 100%;
@@ -18,8 +18,8 @@ aside.game-nav {
     height: 100%;
   }
   nav#game-nav {
-    background-color: $primary-color;
-    color: $primary-color-text;
+    background-color: var(--primary-color);
+    color: var(--primary-color-text);
     padding-left: 1em;
 
     @media screen and (min-width: 1070px) {
@@ -27,7 +27,7 @@ aside.game-nav {
     }
 
     a {
-      color: $primary-color-text;
+      color: var(--primary-color-text);
       text-decoration: none;
     }
     /* Force accessible focus state */
@@ -35,7 +35,7 @@ aside.game-nav {
       box-sizing: content-box;
 
       &:focus {
-        background-color: $primary-color-light !important;
+        background-color: var(--primary-color-light) !important;
       }
     }
 
@@ -50,13 +50,13 @@ aside.game-nav {
       }
 
       &.current {
-        background-color: $secondary-color;
+        background-color: var(--secondary-color);
       }
     }
 
     button {
-      color: $primary-color-text;
-      background-color: $primary-color;
+      color: var(--primary-color-text);
+      background-color: var(--primary-color);
     }
 
     > .menu-toggle {
@@ -111,7 +111,7 @@ aside.game-nav {
     }
 
     .menu {
-      background-color: $primary-color;
+      background-color: var(--primary-color);
       list-style: none;
       padding: 0;
       margin: 0;
@@ -137,18 +137,18 @@ aside.game-nav {
       .menu-link,
       .menu-toggle {
         display: block;
-        background-color: $primary-color;
+        background-color: var(--primary-color);
         text-decoration: none;
         border: none;
         padding: 1rem 2rem;
 
         &:hover {
-          background-color: $primary-color-hover;
+          background-color: var(--primary-color-hover);
         }
       }
 
       .menu-link:active {
-        background-color: $primary-color-light;
+        background-color: var(--primary-color-light);
       }
 
       .menu-item {
